# internal/api/docs/openapi_docs.go
@@ -1,4 +1,4 @@
-// Package docs Code generated by swaggo/swag at 2023-10-26 22:08:53.1784516 +0800 CST m=+3.372946701. DO NOT EDIT
+// Package docs Code generated by swaggo/swag at 2023-10-29 20:41:23.795077 +0800 CST m=+2.750035701. DO NOT EDIT
 package docs
 
 import "github.com/swaggo/swag"
@@ -22,9 +22,14 @@ const docTemplateopenapi = `{
     "host": "{{.Host}}",
     "basePath": "{{.BasePath}}",
     "paths": {
-        "/api": {
+        "/info": {
             "get": {
-                "description": "get user info",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get the key info",
                 "consumes": [
                     "application/json"
                 ],
@@ -34,14 +39,7 @@ const docTemplateopenapi = `{
                 "tags": [
                     "user"
                 ],
-                "summary": "UserInfo",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "uuid",
-                        "in": "query"
-                    }
-                ],
+                "summary": "KeyInfo",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -54,7 +52,7 @@ const docTemplateopenapi = `{
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/user.Info"
+                                            "$ref": "#/definitions/auth.APIKey"
                                         }
                                     }
                                 }
@@ -66,23 +64,17 @@ const docTemplateopenapi = `{
         }
     },
     "definitions": {
-        "role.RoleInfo": {
+        "auth.APIKey": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "role code, must be alpha numeric",
-                    "type": "string",
-                    "example": "ADMIN"
+                "expiredAt": {
+                    "type": "integer"
                 },
-                "id": {
-                    "description": "role id",
-                    "type": "integer",
-                    "example": 1
+                "key": {
+                    "type": "string"
                 },
                 "name": {
-                    "description": "role name",
-                    "type": "string",
-                    "example": "admin"
+                    "type": "string"
                 }
             }
         },
@@ -100,33 +92,6 @@ const docTemplateopenapi = `{
                 "msg": {
                     "type": "string",
                     "example": "operation success"
-                }
-            }
-        },
-        "user.Info": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "integer",
-                    "example": 947416200
-                },
-                "email": {
-                    "type": "string",
-                    "example": "jacklove@lol.com"
-                },
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/role.RoleInfo"
-                    }
-                },
-                "username": {
-                    "type": "string",
-                    "example": "jack"
-                },
-                "uuid": {
-                    "type": "string",
-                    "example": "55BBA4ED-18D3-790F-EABF-A5330E527586"
                 }
             }
         }
