# internal/api/docs/openapi_swagger.json
@@ -15,9 +15,14 @@
     },
     "basePath": "/open/v1",
     "paths": {
-        "/api": {
+        "/info": {
             "get": {
-                "description": "get user info",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get the key info",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,14 +32,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "UserInfo",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "uuid",
-                        "in": "query"
-                    }
-                ],
+                "summary": "KeyInfo",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -47,7 +45,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/user.Info"
+                                            "$ref": "#/definitions/auth.APIKey"
                                         }
                                     }
                                 }
@@ -59,23 +57,17 @@
         }
     },
     "definitions": {
-        "role.RoleInfo": {
+        "auth.APIKey": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "role code, must be alpha numeric",
-                    "type": "string",
-                    "example": "ADMIN"
+                "expiredAt": {
+                    "type": "integer"
                 },
-                "id": {
-                    "description": "role id",
-                    "type": "integer",
-                    "example": 1
+                "key": {
+                    "type": "string"
                 },
                 "name": {
-                    "description": "role name",
-                    "type": "string",
-                    "example": "admin"
+                    "type": "string"
                 }
             }
         },
@@ -93,33 +85,6 @@
                 "msg": {
                     "type": "string",
                     "example": "operation success"
-                }
-            }
-        },
-        "user.Info": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "integer",
-                    "example": 947416200
-                },
-                "email": {
-                    "type": "string",
-                    "example": "jacklove@lol.com"
-                },
-                "roles": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/role.RoleInfo"
-                    }
-                },
-                "username": {
-                    "type": "string",
-                    "example": "jack"
-                },
-                "uuid": {
-                    "type": "string",
-                    "example": "55BBA4ED-18D3-790F-EABF-A5330E527586"
                 }
             }
         }
