# internal/api/user/api.go
@@ -1,7 +1,10 @@
 package user
 
 import (
+	"github.com/dstgo/wilson/internal/core/authen"
+	"github.com/dstgo/wilson/internal/core/resp"
 	"github.com/dstgo/wilson/internal/handler/user"
+	"github.com/dstgo/wilson/internal/types/auth"
 	"github.com/gin-gonic/gin"
 	"github.com/google/wire"
 )
@@ -24,15 +27,20 @@ type InfoApi struct {
 	hInfo user.UserInfo
 }
 
-// UserInfo
-// @Summary      UserInfo
-// @Description  get user info
+// KeyInfo
+// @Summary      KeyInfo
+// @Description  get the key info
 // @Tags         user
 // @Accept       json
 // @Produce      json
-// @Param        uuid query     types.Uid  true  "user uuid"
-// @Success      200  {object}  types.Response{data=user.Info}
-// @Router       /api [GET]
-func (i InfoApi) UserInfo(ctx *gin.Context) {
-
+// @Success      200  {object}  types.Response{data=auth.APIKey}
+// @Router       /info [GET]
+// @Security    ApiKeyAuth
+func (i InfoApi) KeyInfo(ctx *gin.Context) {
+	info := authen.GetContextKeyInfo(ctx)
+	resp.Ok(ctx).MsgI18n("op.query.ok").Data(auth.APIKey{
+		Key:       info.Key,
+		Name:      info.Name,
+		ExpiredAt: info.ExpiredAt,
+	}).Send()
 }
